[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/UI/Health UI Full.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/UI/Health UI Empty.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/UI/Health UI Half.png" type="Texture" id=3]
[ext_resource path="res://assets/scripts/UI.gd" type="Script" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_bottom = 15.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts_Empty" type="TextureRect" parent="MarginContainer"]
margin_right = 11.0
margin_bottom = 10.0
rect_min_size = Vector2( 11, 10 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts_Half" type="TextureRect" parent="MarginContainer"]
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hearts_Full" type="TextureRect" parent="MarginContainer"]
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
